Programming Languages/Hw2/part4/t49.output
running e2c
compiling the C generated code
t49.c: In function ‘main’:
t49.c:4:2: error: expected expression before ‘=’ token
  = ;
  ^
t49.c:5:5: error: expected expression before ‘<=’ token
 if( <= 0){
     ^
t49.c:6:16: error: ‘bbbb’ undeclared (first use in this function)
 printf("%d\n", bbbb);
                ^
t49.c:6:16: note: each undeclared identifier is reported only once for each function it appears in
t49.c:9:2: error: expected expression before ‘=’ token
  = ;
  ^
t49.c:10:16: error: ‘k’ undeclared (first use in this function)
 printf("%d\n", k + );
                ^
t49.c:10:20: error: expected expression before ‘)’ token
 printf("%d\n", k + );
                    ^
t49.c:11:5: error: expected expression before ‘<=’ token
 if( <= 0){
     ^
t49.c:15:2: error: expected expression before ‘=’ token
  = ;
  ^
t49.c:16:5: error: expected expression before ‘;’ token
 2 = ;
     ^
t49.c:18:2: error: expected expression before ‘=’ token
  = ;
  ^
t49.c:19:8: error: expected expression before ‘;’ token
 0 =  + ;
        ^
t49.c:20:11: error: expected expression before ‘<=’ token
 while( -  <= 0){
           ^
t49.c:21:2: error: expected expression before ‘=’ token
  = ;
  ^
t49.c:22:17: error: expected expression before ‘)’ token
 printf("%d\n", ~);
                 ^
t49.c:24:2: error: expected expression before ‘=’ token
  =  + ;
  ^
t49.c:27:2: error: expected expression before ‘=’ token
  =  + ;
  ^
t49.c:28:9: error: expected expression before ‘;’ token
 2 = 2 + ;
         ^
t49.c:30:17: error: expected expression before ‘)’ token
 printf("%d\n", ~);
                 ^
t49.c:36:17: error: expected expression before ‘)’ token
 printf("%d\n", ~);
                 ^
t49.c:41:17: error: expected expression before ‘)’ token
 printf("%d\n", ~);
                 ^
